Order Work: sample grid with input (non-functional) – deemed way to complex, moved to try Java solution

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-
+    position: relative;
 }
 
 nav {
@@ -52,7 +52,10 @@ nav {
     background-color: #f5f5f5;
 }
 
-.affix.attached-affix {
-    top: 0;
+.affix {
+    /*top: 0px;*/
+}
+
+.work-order-actions {
     width: 165px;
 }
