--- a/src/main/resources/templates/work/order.html
+++ b/src/main/resources/templates/work/order.html
@@ -64,7 +64,8 @@
                 </tr>
                 </tbody>
             </table>
-            
+
+            <a th:href="@{/work/csv}" class="btn btn-default">Generate CSV</a>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
