Order Work: estimated cost, project code charging, display all options

--- a/src/main/resources/templates/work/index.html
+++ b/src/main/resources/templates/work/index.html
@@ -234,6 +234,7 @@
 
                             order.product = {
                                 name: products[productIndex].name,
+                                unitCost: products[productIndex].unitCost,
                                 options: products[productIndex].options
                             };
 
