--- a/src/main/resources/templates/groups/index.html
+++ b/src/main/resources/templates/groups/index.html
@@ -14,6 +14,8 @@
     </div>
     <form th:action="@{/groups/group/}" th:object="${groupRequest}" method="POST" role="form">
 
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
         <div class="row">
             <div class="col-md-10">
                 <table class="table table-hover table-selectable" id="jqp-groups">
