--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <div class="col-md-10">
+    <div class="col-md-12">
         <div class="row">
             <h3>Groups</h3>
 
@@ -21,13 +21,13 @@
         </div>
     </div>
 
-    <div class="col-md-2">
-        <ul class="nav nav-pills nav-stacked">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Messages</a></li>
-        </ul>
-    </div>
+    <!--<div class="col-md-2">-->
+        <!--<ul class="nav nav-pills nav-stacked">-->
+            <!--<li class="active"><a href="#">Home</a></li>-->
+            <!--<li><a href="#">Profile</a></li>-->
+            <!--<li><a href="#">Messages</a></li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
 </div>
 
