--- a/src/main/resources/templates/samples/create.html
+++ b/src/main/resources/templates/samples/create.html
@@ -15,6 +15,8 @@
 
     <form th:action="@{/samples/store/}" th:object="${sampleRequest}" method="POST" role="form">
 
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
         <div class="form-group">
             <label for="amount">Amount of samples</label>
             <input type="text" placeholder="Amount of samples..." id="amount"
