--- a/src/main/resources/templates/work/order.html
+++ b/src/main/resources/templates/work/order.html
@@ -16,6 +16,8 @@
     <div>
         <form th:action="@{/work/submit}" th:method="put" th:object="${workOrder}">
 
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
             <input type="hidden" th:value="*{samples.size()}" name="sample_count" id="sample-count"/>
 
             <div>
@@ -38,6 +40,8 @@
                 </ul>
 
             </div>
+
+            <h3>Samples</h3>
 
             <div class="order-grid">
                 <table class="table table-hover">
