Progress on submitting orders (querying the webservice) Moved js from html page to separate js files to avoid conflicts with Thymeleaf

--- a/src/main/resources/templates/groups/index.html
+++ b/src/main/resources/templates/groups/index.html
@@ -159,39 +159,7 @@
 
 <div th:include="fragments/common :: footer"></div>
 
-<script type="application/javascript">
-    $(document).ready(function () {
-
-        var $groups = $('#jqp-groups');
-
-        $groups.pager({
-            url: '/groups/json/',
-            template: '#group-template',
-            loadButton: '#jqp-load-more-groups',
-            appendBefore: '#jqp-append-before-groups'
-        });
-
-        $groups.selectableElement({
-            element: 'tbody .selectable'
-        });
-
-        $('#create-group').createGroup({
-            modal: '#groupModal',
-            confirm: '#modalConfirm',
-            mode: 'groups',
-            template: '#modal-group-template'
-        });
-
-        $groups.on('element.selected', function (event) {
-            var $button = $('#create-group');
-            if (event.count > 0) {
-                $button.removeAttr('disabled');
-            } else {
-                $button.attr('disabled', 'disabled');
-            }
-        });
-    });
-</script>
+<script type="application/javascript" th:src="@{/js/groups/index.js}"></script>
 
 </body>
 </html>
