--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -120,25 +120,7 @@
 </div>
 <!-- /.modal -->
 
-<script type="application/javascript">
-    $(document).ready(function () {
-        $('.jqp-samples').each(function () {
-            var $this = $(this);
-
-            var id = $this.find('.jqp-append-before').attr('id');
-            id = id.split("-")[1];
-
-            $(this).pager({
-                url: '/samples/byGroup/' + id,
-                template: '#sample-template',
-                loadButton: '#load-' + id,
-                appendBefore: '#append-' + id,
-                metadata: '#meta-' + id
-            });
-        });
-    });
-</script>
-
+<script type="application/javascript" th:src="@{/js/groups/show.js}"></script>
 
 </body>
 </html>
