--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -33,27 +33,7 @@
 
 <div th:replace="fragments/common :: footer"></div>
 
-<script type="application/javascript">
-    $(document).ready(function () {
-
-        $('.jqp-samples').pager({
-            url: '/samples/json/',
-            template: '#sample-template',
-            loadButton: '#jqp-load-more-samples',
-            appendBefore: '#jqp-append-before-samples',
-            metadata: '#jqp-metadata-samples'
-        });
-
-        $('.jqp-groups').pager({
-            url: '/groups/json/',
-            template: '#group-template',
-            loadButton: '#load-groups',
-            appendBefore: '#append-groups',
-            metadata: '#metadata-groups'
-        });
-
-    });
-</script>
+<script type="application/javascript" th:src="@{/js/main/index.js}"></script>
 
 </body>
 </html>
