--- a/src/main/resources/templates/work/order.html
+++ b/src/main/resources/templates/work/order.html
@@ -15,10 +15,11 @@
 
     <div class="form-wrapper">
         <form th:action="@{/work/submit}" th:method="put" th:object="${workOrder}">
-
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
             <input type="hidden" th:value="*{samples.size()}" name="sample_count" id="sample-count"/>
+
+            <input type="hidden" th:value="${principal.getName()}" name="owner" />
 
             <div>
                 <h3>Product</h3>
